# practical06-pipeline

./: .gitignore  README.md  pyproject.toml  term_context_cookbook.py  term_context_pipeline.py
.github/: cspell.json
.github/workflows/: grade.yml
config/: gatorgrade.yml
tests/: test_term_context_cookbook.py  test_term_context_pipeline.py
writing/: reflection.md
