[tool.poetry]
name = "practical05-pipeline-solution"
version = "0.1.0"
description = ""
authors = ["Janyl Jumadinova <jjumadinova@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
